[gd_scene load_steps=7 format=3 uid="uid://c2rhouknqh6lk"]

[ext_resource type="Script" uid="uid://dboe3k7cmp1go" path="res://script/6_th_lab.gd" id="1_nvin5"]
[ext_resource type="Texture2D" uid="uid://dxpxbub0jn7" path="res://background/N7/Lab_6th.png" id="2_6avrs"]
[ext_resource type="AudioStream" uid="uid://bl17882kv7bjh" path="res://sound/bg.mp3" id="3_ujo5w"]
[ext_resource type="Texture2D" uid="uid://cvet3qwd4qcdm" path="res://background/Other/key.png" id="3_xtrpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csch8"]
size = Vector2(4201.12, 79.5301)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvhvq"]
size = Vector2(9.1377, 1194.42)

[node name="6_th_lab" type="Node2D"]
script = ExtResource("1_nvin5")
metadata/_edit_vertical_guides_ = [-420.0, 429.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, 0)
texture = ExtResource("2_6avrs")

[node name="CanvasModulate" type="CanvasModulate" parent="Sprite2D"]
visible = false
z_index = 1
color = Color(0.0509804, 0.0509804, 0.0509804, 0.960784)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(-5, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(2.5, 107.926)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_csch8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(421, -1)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_cvhvq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
position = Vector2(-410, -15)
scale = Vector2(0.203041, 0.203041)
shape = SubResource("RectangleShape2D_cvhvq")

[node name="SpawnFromMap1" type="Marker2D" parent="Sprite2D"]
position = Vector2(-355, 94)
gizmo_extents = 100.1

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(301, 85)
scale = Vector2(0.341528, 0.341528)
texture = ExtResource("3_xtrpe")

[node name="btn1" type="Marker2D" parent="."]
z_as_relative = false
position = Vector2(-389, 7)
gizmo_extents = 91.1

[node name="key" type="Marker2D" parent="."]
position = Vector2(308, 83)

[node name="E_Label" type="RichTextLabel" parent="."]
offset_left = 498.0
offset_top = -96.0
offset_right = 538.0
offset_bottom = -56.0
text = "E"
metadata/_edit_use_anchors_ = true

[node name="F_Label" type="RichTextLabel" parent="."]
offset_left = 498.0
offset_top = -96.0
offset_right = 538.0
offset_bottom = -56.0
text = "F"

[node name="bg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ujo5w")
volume_db = -10.0
autoplay = true
parameters/looping = true
